--- a/src/View/Reservations/reserver.html.twig
+++ b/src/View/Reservations/reserver.html.twig
@@ -78,7 +78,7 @@
                             <div class="col-12 mb-2 ">
                                 <h4>Ma réservation</h4>
                                 <div class="form-group">
-                                    <input class="form-control" name="selected_date" type="date" value="{{ cartDatas.date }}">
+                                    <input id="datepicker" class="form-control" name="selected_date" type="date" min={{ today }} value="{{ cartDatas.date }}">
                                     {% if errors is defined and errors is not empty %} <p class="form-text"><small class="text-danger">{{ errors.date }}</small></p> {% endif %}
                                 </div>
                                 <div class="form-group">
@@ -142,6 +142,8 @@
 {% endblock %}
 
 {% block javascript %}
-<script src="/assets/script/cart.js" type="text/javascript"></script>
+<script type="text/javascript">
+    console.log('test');
 
+    </script>
 {% endblock %}
