changement de datepicker pour fltapickr. date passées et dates reservées deviennetn descativées

--- a/src/View/Reservations/reserver.html.twig
+++ b/src/View/Reservations/reserver.html.twig
@@ -21,9 +21,6 @@
             </div>
             <div class="row">
                 <div class="form col-12 col-sm-7 offset-sm-1">
-                    <!-- Selection des plats -->
-                    <!-- Le contenu sera placé dans un panier via Javacript -->
-
                     <h4>Mon choix de menus</h4>
                     <div class="form-group">
                         {% for menu in menus %}
@@ -78,7 +75,9 @@
                             <div class="col-12 mb-2 ">
                                 <h4>Ma réservation</h4>
                                 <div class="form-group">
-                                    <input id="datepicker" class="form-control" name="selected_date" type="date" min={{ today }} value="{{ cartDatas.date }}">
+                                    <div class="input-group date">
+                                        <input id="datepicker" type="text" class="form-control datetimepicker-input" name="selected_date" value="{{ cartDatas.date }}"/>
+                                    </div>
                                     {% if errors is defined and errors is not empty %} <p class="form-text"><small class="text-danger">{{ errors.date }}</small></p> {% endif %}
                                 </div>
                                 <div class="form-group">
@@ -141,9 +140,24 @@
     </section>
 {% endblock %}
 
-{% block javascript %}
+{% block scripts %}
 <script type="text/javascript">
-    console.log('test');
+    let disabledDays = {{ dates|json_encode|raw }};
+    let dates = [];
+    disabledDays.forEach(function(date) {
+        dates.push(date.date_resa);
+    });
 
-    </script>
+    console.log(dates);
+
+    let optional_config = {
+        minDate: {{ today|json_encode|raw }},
+        disable: dates,
+        altInput: true,
+        altFormat: "F j, Y",
+        dateFormat: "Y-m-d",
+    };
+    $("#datepicker").flatpickr(optional_config);
+
+</script>
 {% endblock %}
