hotfix naming sur layout.html.twig

--- a/src/View/Reservations/reserver.html.twig
+++ b/src/View/Reservations/reserver.html.twig
@@ -143,7 +143,7 @@
     </section>
 {% endblock %}
 
-{% block scripts %}
+{% block javascript %}
 <script type="text/javascript">
     let disabledDays = {{ dates|json_encode|raw }};
     let dates = [];
